--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-awesome-reveal": "^4.2.6",
     "react-dom": "latest",
     "react-floating-whatsapp": "^5.0.8",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-slideshow-image": "^4.3.0"
   },
   "devDependencies": {
     "@types/node": "latest",
